syntax = "proto3";
package User;

option go_package = ".;pb";
import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
}
message RequestList{
}
message ReposeList{
  repeated User user = 1;
}
message RequestFindByEmail{
  string email = 1;
}
message ReposeFindByEmail{
  User user = 1;
}
message RequestCreate{
  User user = 1;
}
message UpdateFields {
  string name = 1;
  string address = 2;
  string phone = 3;
}

message RequestUpdateByEmail {
  string email = 1;
  UpdateFields fields = 2;
}

message ResponseUpdateByEmail {
  bool message = 1;
}


message RequestDeleteByEmail{
  string email = 1;
}
message ReposeDeleteByEmail{
  bool message = 1;
}
service UserService {
  rpc List(RequestList) returns (ReposeList) {}
  rpc FindByEmail(RequestFindByEmail) returns (ReposeFindByEmail) {}
  rpc Create(RequestCreate) returns (User) {}
  rpc UpdateByEmail(RequestUpdateByEmail) returns (ResponseUpdateByEmail) {}
  rpc DeleteByEmail(RequestDeleteByEmail) returns (ReposeDeleteByEmail) {}
}
